--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -13,7 +13,7 @@
         <div>
           <img src="{{ item.image.url }}" class="rounded-t-xl">
         </div>
-        <div class="p-6 bg-gray-300 rounded-b-xl">
+        <div class="p-6 bg-gray-300 rounded-b-xl text-center">
           <h2 class="text-2xl ">{{ item.name }}</h2>
           <p class="text-gray-500">Price: {{ item.price }}</p>
         </div>
